--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.3.0",
